# quench

./: .gitignore  .gitmessage  .v0.rc  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  quench.toml
crates/cli/: Cargo.toml  build.rs  clippy.toml
crates/cli/benches/: adapter.rs  dogfood.rs  git.rs  javascript.rs  regression.rs  report.rs  stress.rs  tests.rs  tests_ci.rs
crates/cli/src/: baseline.rs  baseline_tests.rs  cache.rs  cache_tests.rs  check.rs  check_tests.rs  cli.rs  cli_tests.rs  cmd_check.rs  cmd_cloc.rs  cmd_config.rs  cmd_init.rs  cmd_report.rs  color.rs  color_tests.rs  completions.rs  completions_tests.rs  config.rs  config_tests.rs  discovery.rs  discovery_tests.rs  env.rs  env_tests.rs  error.rs  error_tests.rs  file_reader_tests.rs  file_size.rs  file_size_tests.rs  git.rs  git_tests.rs  help.rs  help_tests.rs  init.rs  init_tests.rs  latest_tests.rs  lib.rs  main.rs  profiles.rs  profiles_tests.rs  ratchet.rs  (+15 more)
crates/cli/src/adapter/: generic.rs  generic_tests.rs  glob.rs  glob_tests.rs  go_tests.rs  javascript_tests.rs  mod.rs  mod_tests.rs  patterns.rs  patterns_tests.rs  rust.rs  rust_tests.rs  shell_tests.rs
crates/cli/src/adapter/common/: mod.rs  patterns.rs  patterns_tests.rs  suppress.rs  test_utils.rs
crates/cli/src/adapter/go/: mod.rs  policy.rs  policy_tests.rs  suppress.rs  suppress_tests.rs
crates/cli/src/adapter/javascript/: bundler.rs  bundler_tests.rs  mod.rs  package_manager.rs  package_manager_tests.rs  policy_tests.rs  suppress.rs  suppress_tests.rs  workspace.rs  workspace_tests.rs
crates/cli/src/adapter/python/: mod.rs  mod_tests.rs  package_manager.rs  package_manager_tests.rs  policy.rs  policy_tests.rs  suppress.rs  suppress_tests.rs
crates/cli/src/adapter/ruby/: mod.rs  mod_tests.rs  policy_tests.rs  suppress_tests.rs
crates/cli/src/adapter/rust/: cfg_test.rs  cfg_test_tests.rs  mod.rs  policy.rs  policy_tests.rs  suppress.rs  suppress_tests.rs  workspace.rs  workspace_tests.rs
crates/cli/src/adapter/shell/: mod.rs  policy.rs  policy_tests.rs  suppress.rs  suppress_tests.rs
crates/cli/src/checks/: cloc.rs  cloc_tests.rs  escapes.rs  escapes_tests.rs  license.rs  license_tests.rs  mod.rs  mod_tests.rs  stub_tests.rs
crates/cli/src/checks/agents/: config.rs  config_tests.rs  content.rs  content_tests.rs  detection.rs  detection_tests.rs  mdc.rs  mdc_tests.rs  mod.rs  mod_tests.rs  reconcile.rs  reconcile_tests.rs  sections.rs  sections_tests.rs  sync_tests.rs
crates/cli/src/checks/docs/: commit_tests.rs  content.rs  content_tests.rs  links.rs  links_tests.rs  mod.rs  specs.rs  specs_tests.rs  toc.rs  toc_tests.rs
crates/cli/src/checks/docs/toc/: detect.rs  mod.rs  parse.rs  resolve.rs
crates/cli/src/checks/escapes/: comment.rs  go_suppress.rs  javascript_suppress.rs  lint_policy.rs  metrics.rs  mod.rs  mod_tests.rs  patterns.rs  python_suppress.rs  ruby_suppress.rs  shell_suppress.rs  suppress_common.rs  suppress_common_tests.rs  violations.rs
crates/cli/src/checks/git/: docs.rs  docs_tests.rs  mod.rs  mod_tests.rs  parse.rs  parse_tests.rs  template.rs  template_tests.rs
crates/cli/src/checks/placeholders/: javascript_tests.rs  mod.rs  mod_tests.rs  rust_tests.rs
crates/cli/src/checks/testing/: auto_detect.rs  correlation_tests.rs  mod.rs  mod_tests.rs  placeholder_tests.rs  suite.rs  suite_tests.rs
crates/cli/src/checks/testing/correlation/: analysis.rs  analysis_tests.rs  checking.rs  diff.rs  diff_tests.rs  mod.rs
crates/cli/src/checks/testing/runners/: bun.rs  cargo.rs  cargo_tests.rs  coverage.rs  cucumber.rs  cucumber_tests.rs  custom.rs  go.rs  go_coverage.rs  go_detect.rs  instrumented.rs  jest.rs  jest_tests.rs  kcov.rs  kcov_tests.rs  minitest.rs  mod.rs  mod_tests.rs  py_detect.rs  py_detect_tests.rs  pytest.rs  pytest_tests.rs  python_coverage_tests.rs  result.rs  ruby_coverage_tests.rs  rust_detect.rs  unittest.rs  unittest_tests.rs
crates/cli/src/checks/tests/: auto_detect.rs  correlation.rs  correlation_tests.rs  diff.rs  diff_tests.rs  mod.rs  mod_tests.rs  patterns.rs  placeholder.rs  placeholder_tests.rs  suite.rs  thresholds.rs
crates/cli/src/checks/tests/runners/: bats.rs  bats_tests.rs  bun.rs  bun_tests.rs  cargo.rs  cargo_tests.rs  coverage.rs  coverage_tests.rs  cucumber.rs  cucumber_tests.rs  custom.rs  custom_tests.rs  go.rs  go_coverage_tests.rs  go_tests.rs  instrumented.rs  instrumented_tests.rs  jest.rs  jest_tests.rs  js_coverage.rs  js_coverage_tests.rs  js_detect.rs  js_detect_tests.rs  json_utils.rs  json_utils_tests.rs  kcov.rs  kcov_tests.rs  minitest.rs  minitest_tests.rs  mod.rs  mod_tests.rs  pytest.rs  pytest_tests.rs  python_coverage.rs  result.rs  result_tests.rs  rspec.rs  rspec_tests.rs  ruby_coverage.rs  ruby_coverage_tests.rs  (+4 more)
crates/cli/src/cloc/: comment.rs  comment_tests.rs  mod.rs  mod_tests.rs
crates/cli/src/cmd_check/: mod.rs
crates/cli/src/config/: checks.rs  checks_tests.rs  defaults.rs  defaults_tests.rs  duration.rs  duration_tests.rs  go.rs  go_tests.rs  javascript.rs  javascript_tests.rs  lang_common.rs  mod.rs  mod_tests.rs  parse.rs  python.rs  python_tests.rs  ratchet.rs  ratchet_tests.rs  ruby.rs  ruby_tests.rs  shell.rs  shell_tests.rs  suggest.rs  suggest_tests.rs  suppress.rs  suppress_tests.rs  test_config.rs  test_config_tests.rs  tests_check.rs
crates/cli/src/output/: json.rs  json_tests.rs  mod.rs  text.rs  text_tests.rs
crates/cli/src/pattern/: matcher.rs  matcher_tests.rs  mod.rs  mod_tests.rs
crates/cli/src/report/: html.rs  html_tests.rs  json.rs  json_tests.rs  markdown.rs  markdown_tests.rs  mod.rs  mod_tests.rs  test_support.rs  text.rs  text_tests.rs
docs/: benchmarking.md  profiling.md
tests/fixtures/python-poetry/: pyproject.toml  quench.toml
tests/fixtures/python-poetry/src/poetryapp/: __init__.py  utils.py
tests/fixtures/python-poetry/tests/: test_utils.py
tests/fixtures/python/coverage-simple/: pyproject.toml  quench.toml
tests/fixtures/python/coverage-simple/tests/: test_math.py
(+857 files in other folders)
