[workspace]
resolver = "2"
members = ["crates/cli"]
exclude = ["tests/fixtures"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/alfredjeanlab/quench"

[workspace.lints.rust]
# Use "deny" instead of "forbid" to allow localized #[allow(unsafe_code)]
# for memory-mapped I/O in file_reader.rs (per performance spec)
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
strip = true
lto = true
panic = "abort"
