[package]
name = "quench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A fast linting tool for AI agents that measures quality signals"
readme = "../../README.md"

[[bin]]
name = "quench"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
globset = "0.4"
memmap2 = "0.9"
crossbeam-channel = "0.5"
termcolor = "1.4"
anstyle = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.11"
postcard = { version = "1", default-features = false, features = ["alloc"] }
dashmap = "6"
memchr = "2.7"
aho-corasick = "1"
regex = "1"
serde_yaml = "0.9"
git2 = "0.19"
percent-encoding = "2"
flate2 = "1"

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", features = ["html_reports"] }
ignore = "0.4"
jsonschema = "0.29"
predicates = "3"
proptest = "1"
serde_json = "1"
similar-asserts = "1.7.0"
tempfile = "3"
yare = "3"

[[test]]
name = "specs"
path = "../../tests/specs.rs"

[[bench]]
name = "baseline"
harness = false

[[bench]]
name = "file_walking"
harness = false

[[bench]]
name = "check"
harness = false

[[bench]]
name = "adapter"
harness = false

[[bench]]
name = "stress"
harness = false

[[bench]]
name = "dogfood"
harness = false

[[bench]]
name = "javascript"
harness = false

[[bench]]
name = "docs"
harness = false

[[bench]]
name = "tests"
harness = false

[[bench]]
name = "tests_ci"
harness = false

[[bench]]
name = "report"
harness = false

[[bench]]
name = "git"
harness = false

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "memory"
harness = true

[[bench]]
name = "regression"
harness = true

[lints]
workspace = true
