[tool.poetry]
name = "poetryapp"
version = "0.1.0"
description = "Poetry-managed Python project"
authors = ["Test Author <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
